<?xml version="1.0"?>
<package format="2">
  <description> RViz panel for MTracker. </description>
  <name>mtracker_gui</name>
  <version>1.0.0</version>
  <maintainer email="inz.mateusz.przybyla@gmail.com">Mateusz Przybyla</maintainer>
  <author>Mateusz Przybyla</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rviz</depend>
  <depend>geometry_msgs</depend>
  <depend>mtracker</depend>
  <depend>tf</depend>
  <depend>joy</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>

